2007-01-31  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Maciej.

        <rdar://problem/4886776>
        REGRESSION: After opening a web archive, location shows the actual URL, not the webarchive file

        * webarchive/loading/resources/helloworld.webarchive: Added.
        * webarchive/loading/test-loading-archive-expected.txt: Added.
        * webarchive/loading/test-loading-archive.html: Added.

2007-01-31  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        Test for <rdar://problem/4521461> REGRESSION: when keyPress event changes form focus, inserted key goes to wrong control

        * fast/events/keypress-focus-change-expected.txt: Added.
        * fast/events/keypress-focus-change.html: Added.
        * fast/events/resources/keypress-frame.html: Added.

2007-01-30  David Kilzer  <ddkilzer@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=11882
        Need a way to regression test .webarchive output files

        Created webarchive tests that exercise various features of the WebArchive format.

        * webarchive/resources/apple.gif: Copied from fast/canvas/resources/apple.gif.
        * webarchive/resources/dump-webarchive.js: Added.
        * webarchive/resources/test-frame.html: Added.
        * webarchive/resources/test-style.css: Added.
        * webarchive/test-body-background-expected.txt: Added.
        * webarchive/test-body-background.html: Added.
        * webarchive/test-duplicate-resources-expected.txt: Added.
        * webarchive/test-duplicate-resources.html: Added.
        * webarchive/test-frameset-expected.txt: Added.
        * webarchive/test-frameset.html: Added.
        * webarchive/test-img-src-expected.txt: Added.
        * webarchive/test-img-src.html: Added.
        * webarchive/test-input-src-expected.txt: Added.
        * webarchive/test-input-src.html: Added.
        * webarchive/test-link-href-expected.txt: Added.