@@ -1,0 +1,20 @@
+<HTML>
+  <HEAD>
+    <TITLE></TITLE>
+    <LINK rel="stylesheet" type="<foobar><>" href="">
+    <meta name="keywords" content="<body>, <foobar>, <>">
+    <META HTTP-EQUIV="Content-Type" CONTENT="text/html" charset="utf-8">
+
+  </HEAD>
+  <BODY>
+  <P>Test for <a href="http://bugs.webkit.org/show_bug.cgi?id=12506">bug 12506</a>:
+  REGRESSION: Safari doesn't display hebrew text on a web page, displayed correctly on Tiger.</P>
+  <P>SUССЕSS</P>
+  
+  <SCRIPT>
+  document.write("<p>Charset: " + document.inputEncoding + "</p>");
+  if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+  </SCRIPT>
+  </BODY>
+</HTML>
