@@ -1,3 +1,15 @@
+2007-01-31  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin.
+
+        http://bugs.webkit.org/show_bug.cgi?id=12506
+        REGRESSION: Safari doesn't display hebrew text on a web page,
+        displayed correctly on Tiger
+
+        * loader/TextResourceDecoder.cpp:
+        (WebCore::TextResourceDecoder::checkForHeadCharset): Skip over 
+        quoted attributes.
+
 2007-01-31  David Carson  <dacarson@gmail.com>
 
         Reviewed by Darin.
