@@ -1,3 +1,14 @@
+2007-01-31  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin.
+
+        http://bugs.webkit.org/show_bug.cgi?id=12506
+        REGRESSION: Safari doesn't display hebrew text on a web page,
+        displayed correctly on Tiger
+
+        * fast/encoding/pseudo-tags-in-attributes-expected.txt: Added.
+        * fast/encoding/pseudo-tags-in-attributes.html: Added.
+
 2007-01-31  Anders Carlsson  <acarlsson@apple.com>
 
         Reviewed by Maciej.
